# mcp-client

./: .gitignore  AGENTS.md  README.md  app.py  mcp_transport.py  pyproject.toml  run.sh  rxconfig.py
src/mcp_client/: mcp_client.py  mcp_transport.py
src/mcp_client/components/: __init__.py  param_table.py  result_display.py  sidebar.py  tab_bar.py  tool_document.py  tool_form.py
src/mcp_client/state/: __init__.py  connection.py  tool_tester.py  view.py
src/mcp_client/utils/: formatters.py
