[project]
name = "mcp-client"
version = "0.2.0"
description = "MCP Client — Web UI for browsing and testing MCP tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reflex>=0.7.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
